Upgraded internal color processing and frame interpolation pipeline from 8 bit integers to high precision 32 bit floating point math. Prevents intermediate rounding loss, delivering flawlessly smooth color fades, rich dark scene contrast, and artifact free LED rendering.